# akasha

./: .gitignore  .gitmodules  .travis.yml  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: main.yml
akasha/: ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  library.py  strings.py  stylesheet.ily  tools.py
akasha/builds/: compile_parts.scr
akasha/etc/: 03-stages.md  03-stages.txt  akasha-notes.rtf  materials.md  notes.rtf  notes.txt  segments.md  segments.txt  stages.md  to-do.md  to-do.txt
akasha/materials/: __abbreviations__.py  __init__.py
akasha/sections/: stylesheet.ily
akasha/segments/: stylesheet.ily
akasha/stylesheets/: context-definitions.ily  contexts.ily  default-instrument-names.ily  markups.ily  parts.ily  stylesheet.ily
akasha/tools/: ScoreTemplate.py  TimeSignatureMaker.py  __init__.py  accelerando_rhythm.py  cello_solo_pitches.py  cello_solo_rhythm.py  dense_getato_rhythm.py  fill_first_half.py  final_markup.py  getato_pitches.py  glissando_rhythm.py  growth.py  harmonic_glissando_pitches.py  make_accelerando_rhythm_specifier.py  make_cello_solo_pitch_specifier.py  make_cello_solo_rhythm_specifier.py  make_dense_getato_rhythm_specifier.py  make_getato_pitch_specifier.py  make_glissando_rhythm_specifier.py  make_harmonic_glissando_pitch_specifier.py  make_perforated_counts.py  make_polyphony_rhythm_specifier.py  make_ritardando_rhythm_specifier.py  make_scratch_rhythm_specifier.py  make_sparse_getato_rhythm_specifier.py  make_untied_notes_rhythm_specifier.py  make_viola_ob_rhythm_specifier.py  manifest.py  (+9 more)
(+968 files in other folders)
