[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akasha"
version = "3.30"
description = "Akasha (2015) for string quartet"
authors = [{ name = "Trevor BaÄa", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.30"]

[project.urls]
Homepage = "https://github.com/trevorbaca/akasha"

[tool.setuptools]
packages = ["akasha"]
package-dir = { "" = "source" }
